# ait-qkd

./: .gitignore  CMakeLists.txt  Changes  Doxyfile  INSTALL.systemd.wheezy  INSTALL.sysv.wheezy  LICENSE-CC-BY-NC-SA.txt  README  README.md  UNINSTALL.systemd.wheezy  UNINSTALL.sysv.wheezy  bob.the.builder  config.h.in
doc/: CMakeLists.txt  qkd.xsd
doc/handbook/: AIT-QKD-Software-Handbook.tex  CMakeLists.txt  appendix.tex  chapter_api.tex  chapter_how_to.tex  chapter_introduction.tex  chapter_qkd_gui.tex  chapter_qkd_management.tex  chapter_qkd_network.tex  chapter_qkd_stack.tex  chapter_the_software.tex  chapter_tools.tex
doc/simulator/: AIT-QKD-Simultator-Documentation.tex  CMakeLists.txt  components.tex  concepts.tex  extensions.tex  gui.tex  outline.tex  overview.tex  references.tex
doc/simulator/drawings/: channel.odg  detector_alice.odg  detector_bob.odg  fiber.odg
etc/: CMakeLists.txt
etc/dbus-1/: qkd.conf
etc/default/: qkd-dbus
etc/init.d/: qkd-dbus
etc/profile.d/: qkd_dbus_address.sh
etc/q3p/: sample-q3pd.conf
etc/qkd/: sample-pipeline-alice.xml  sample-pipeline-auth-final.conf  sample-pipeline-auth-starting.conf  sample-pipeline-bob.xml  sample-pipeline-default.conf  sample-pipeline.conf
etc/systemd/system/: qkd-dbus.service  qkd-dbus.socket
examples/: CMakeLists.txt  README
examples/demo-setup/: README
examples/module-1/: compile.sh  main.cpp
examples/module-2/: CMakeLists.txt
examples/module-3/: CMakeLists.txt
examples/module-4/: CMakeLists.txt
examples/module-5/: CMakeLists.txt
examples/template/: CMakeLists.txt  README.txt
lib/: CMakeLists.txt
lib/crypto/: association.cpp  context.cpp  crypto_evhash.cpp  crypto_evhash.h  crypto_null.cpp  crypto_null.h  crypto_umac.cpp  crypto_umac.h  crypto_xor.cpp  crypto_xor.h  engine.cpp  evhash.cpp  evhash.h  gf2.cpp  gf2.h  gf2_fast_alpha.cpp  gf2_fast_alpha.h  scheme.cpp
lib/crypto/new/: evhash.h
lib/crypto/old/: algorithm.h  context.h  ids.h  simple-state.c  simple-state.cpp  simple-state.h  utility.c  utility.cpp  utility.h
lib/exception/: connection_error.cpp  db_error.cpp  network_error.cpp  protocol_error.cpp  randomengine_error.cpp
lib/key/: key.cpp  key_ring.cpp
lib/module/: communicator.cpp  connection.cpp  connection.h  message.cpp  module.cpp  module_internal.cpp  module_internal.h  path.cpp  path.h  stash.cpp  stash.h  workload.cpp
lib/q3p/db/: db.cpp  db_file.cpp  db_file.h  db_null.cpp  db_null.h  db_ram.cpp  db_ram.h
lib/q3p/engine/: channel.cpp  engine.cpp  message.cpp  mq.cpp  nic.cpp  nic_common.cpp  nic_linux.cpp  nic_win32.cpp  socket_error_strings.h
lib/utility/atof/: atof.cpp
lib/utility/average/: average.cpp  average_data.cpp  average_data.h  average_time.cpp  average_time.h  average_value.cpp  average_value.h
lib/utility/backtrace/: backtrace.cpp
lib/utility/bigint/: bigint.cpp
lib/utility/buffer/: buffer.cpp
lib/utility/checksum/: checksum.cpp  checksum_crc32.cpp  checksum_crc32.h  checksum_md5.cpp  checksum_md5.h  checksum_sha1.cpp  checksum_sha1.h
lib/utility/dbus/: dbus.cpp
lib/utility/debug/: debug.cpp
lib/utility/environment/: environment.cpp
lib/utility/investigation/: investigation.cpp  investigation_dbus.cpp  investigation_dbus.h
lib/utility/memory/: memory.cpp
lib/utility/properties/: properties.cpp
lib/utility/ptree/: ptree.cpp
lib/utility/queue/: queue.cpp
lib/utility/random/: random.cpp  random_c_api.cpp  random_c_api.h  random_cbc_aes.cpp  random_cbc_aes.h  random_congruential.cpp  random_congruential.h  random_file.cpp  random_file.h  random_hmac_sha.cpp  random_hmac_sha.h
lib/utility/shannon/: shannon.cpp
lib/utility/si_units/: si_units.cpp
lib/utility/syslog/: syslog.cpp
lib/utility/zip/: zip.cpp
lib/version/: version.cpp
lib/widget/: lcd.cpp  led.cpp  module_frame.cpp  module_frame.qrc  module_frame.ui  plot.cpp  res.cpp
test/: CMakeLists.txt
test/lib/: CMakeLists.txt  lib.cpp
test/lib/crypto/: association.cpp  crypto.cpp  evhash.cpp
test/lib/key/: key.cpp  key_ring.cpp
test/lib/module/: config_module.cpp  null_module.cpp  terminate_module.cpp  test-module-config  test-module-null  test-module-terminate
test/lib/q3p/: message.cpp
test/lib/utility/: atof.cpp  average.cpp  backtrace.cpp  bigint.cpp  buffer.cpp  checksum.cpp  dbus.cpp  debug.cpp  environment.cpp  investigation.cpp  memory.cpp  queue.cpp  random.cpp  shannon.cpp  si_units.cpp  syslog.cpp  zip.cpp
test/q3p/: alice.conf  bob.conf
test/test-data/: 1000_1024_0.04.alice.cascade.statistics  1000_1024_0.04.alice.ldpc.statistics  auth-final.conf  auth-starting.conf  auth-test.conf  cat-pipeline.conf  debug.conf  disruptive-drop-simple.conf  disruptive-full.conf  disruptive-reorder-simple.conf  full-pipeline.conf  hardware-pickup-alice.conf  hardware-pickup-bob.conf  keystore.conf  module.conf  pipeline-cat-alice.xml  pipeline-cat-bob.xml  pipeline-default-alice.xml  pipeline-default-bob.xml  pipeline-sifting-alice.xml  pipeline-sifting-bob.xml  pipeline.conf  q3pd-file-db-fail.conf  q3pd-file-db-inject.conf  q3pd-file-db.conf  qkd-test-dbus.conf  resize-exact.conf  resize-minimum.conf  shared-secret  shared-secret-long  sifting-pipeline.conf  simulator-pipeline.conf  simulator.conf  statistics.conf  test-qkd-statistics-average-expected
test/test-data/autoconnect/: auth-final.conf  auth-starting.conf  cat-pipeline.conf  pipeline-cat-alice.xml  pipeline-cat-bob.xml
test/test-data/bb84-cascade/: pipeline-alice.xml  pipeline-bob.xml  pipeline.conf
test/test-data/demux/: cat.conf  tee-1.conf  tee-2.conf  tee-3.conf  tee-4.conf  tee-5.conf
test/test-data/ipc-cat-tee/: cat.conf  tee-1.conf  tee-10.conf  tee-2.conf  tee-3.conf  tee-4.conf  tee-5.conf  tee-6.conf  tee-7.conf  tee-8.conf  tee-9.conf
test/test-data/q3p/: alice.conf  bob.conf
test/test-data/qauth/: pipeline-alice.xml  pipeline-bob.xml  pipeline.conf
test/test-data/qkd-sync/: pipeline-cat.conf  pipeline-sync.1.conf
test/test-data/simulator/: alice.xml  bob.xml  pipe-end  pipe-start  pipeline.conf  simulator.conf
test/test-data/tcp-cat-tee/: cat.conf  (+10 more)
(+168 files in other folders)
